Create a Memory Game using React app and publish it to GitHub Pages

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Miltonian+Tattoo&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Miltonian Tattoo', cursive;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  width: 100vw;
+  height: 100vh;
+  background: #1e1c1c url(../public/images/poke_bg.jpeg) center center/cover no-repeat;
+  backdrop-filter: blur(5px);
+  color: white;
 }
