--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   width: 100vw;
-  height: 100vh;
+  height: max(100vh, max-content);
   background: #1e1c1c url(../public/images/poke_bg.jpeg) center center/cover no-repeat;
   backdrop-filter: blur(5px);
   color: white;
